--- a/PS_SAPR_4.vcxproj.filters
+++ b/PS_SAPR_4.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="colorref.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PS_SAPR_4.rc">
